# c-_practice

example1/: CMakeLists.txt  example.cpp
example1/.kdev4/: example1.kdev4
example10/: CMakeLists.txt
example10/.kdev4/: example1.kdev4  example5.kdev4
example10/include/: libmyFunc.h
example10/src/: main.cpp
example11/: CMakeLists.txt  example11.kdev4
example11/.kdev4/: example11.kdev4
example11/include/: SpreadSheet.h  SpreadSheetCell.h  SpreedSheetData.h
example11/src/: SpreadSheet.cpp  SpreadSheetData.cpp  main.cpp  main.cpp~
example12/: CMakeLists.txt  example12.kdev4  readme.txt
example12/.kdev4/: example12.kdev4
example12/include/: mclock.h
example12/src/: main.cpp  mclock.cpp
example13/: CMakeLists.txt  example13.kdev4  readme.txt
example13/include/: employ.h  supervisor.h
example13/src/: employ.cpp  main.cpp  supervisor.cpp
example14/: CMakeLists.txt  Eigen.md  readme.md  readme.txt
example14/include/: .Game.h.kate-swp  Game.h
example14/src/: Game.cpp  SpreadSheetCell.cpp  main.cpp
example2/: CMakeLists.txt  example2.kdev4
example2/.kdev4/: example2.kdev4
example2/src/: main.cpp
example3/: CMakeLists.txt  example3.kdev4
example3/.kdev4/: example3.kdev4
example3/include/: Sale_na.h
example3/src/: main.cpp
example4/: CMakeLists.txt  example4.kdev4
example4/.kdev4/: example4.kdev4
example6/: CMakeLists.txt  example6.kdev4
example7/: CMakeLists.txt  example7.kdev4
example7 (3rd copy)/: CMakeLists.txt  example5.kdev4
example8/: CMakeLists.txt  example8.kdev4
example9/: CMakeLists.txt  example9.kdev4
(+16 files in other folders)
